--- a/index.html
+++ b/index.html
@@ -160,43 +160,21 @@
             </table>
           </div>
 
-          <aside class="speaker-col card">
-            <h4>Keynote Speaker</h4>
-            <p><strong>TBA</strong><br>Affiliation</p>
-            <p><strong>Title:</strong> TBA</p>
-            <p><strong>Time:</strong> TBA</p>
-            <p class="small">Abstract and bio to be announced.</p>
-          </aside>
+                    <aside class="speaker-col card">
+                        <h4>Keynote Speaker</h4>
+                        <p><strong>Name TBA</strong><br>Affiliation</p>
+                        <p><strong>Title:</strong> TBA</p>
+                        <p class="small">Abstract and bio to be announced.</p>
+                    </aside>
         </div>
     </section>
 
-    <!-- Program Committee (commented out for now)
-    <section>
+    <section id="program-committee">
         <h2>Program Committee</h2>
         <div class="committee">
-            <div class="committee-member">Mridul Nandi, ISI Kolkata, India</div>
-            <div class="committee-member">Debrup Chakraborty, ISI Kolkata, India</div>
-            <div class="committee-member">Laltu Sardar, IISER Trivandrum, India</div>
-            <div class="committee-member">Subhabrata Samajder, TCG CREST, India</div>
-            <div class="committee-member">Nilanjan Dutta, TCG CREST, India</div>
-            <div class="committee-member">Avijit Dutta, TCG CREST, India</div>
-            <div class="committee-member">Chaya Ganesh, IISc Bangalore, India</div>
-            <div class="committee-member">Saravanan Vijayakumaran, IIT Bombay, India</div>
-            <div class="committee-member">Stefanie Roos, RPTU, Germany</div>
-            <div class="committee-member">Chethan Kamath, IIT Bombay, India</div>
-            <div class="committee-member">John Augustine, IIT Madras, India</div>
-            <div class="committee-member">Aniket Kate, Purdue University, USA</div>
-            <div class="committee-member">Sushmita Ruj, UNSW Sydney, Australia</div>
-            <div class="committee-member">Sanjit Chatterjee, IISc Bangalore, India</div>
-            <div class="committee-member">Dhiman Saha, IIT Bhilai, India</div>
-            <div class="committee-member">Prabal Banerjee, Avail Project</div>
-            <div class="committee-member">Shyam Kumar Sudhakar, KREA University</div>
-            <div class="committee-member">Sayantan Mukherjee, IIT Jammu, India</div>
-            <div class="committee-member">Sanjay Bhattacherjee, University of Kent, UK</div>
-            <div class="committee-member">Avik Chakraborti, TCG CREST, India</div>
+            <div class="committee-member">TBA</div>
         </div>
     </section>
-    -->
 
     <section id="submission">
         <h2>Paper Submission</h2>
@@ -207,11 +185,13 @@
             </div>
             <div style="margin-top:0.75rem">
                 <strong>Paper format / target:</strong>
-                <p class="small" style="margin:0.25rem 0 0">Full papers: up to 8 pages (excluding references). Short papers: up to 4 pages. Use the IEEE conference template (PDF).</p>
+                <p class="small" style="margin:0.25rem 0 0">Full papers: up to 8 pages (excluding references). Short papers: up to 4 pages. Use the <a href="https://www.ieee.org/conferences/publishing/templates">IEEE conference template</a>.</p>
             </div>
             <div style="margin-top:0.75rem">
-                <strong>Submission portal:</strong>
-                <p class="small" style="margin:0.25rem 0 0">Submission link will be announced on the workshop page and ICBC site — please check the Call for Papers or contact the organisers for the submission portal.</p>
+                <div class="submission-portal-box">
+                    <p class="small" style="margin:0 0 0">Submit your paper through EasyChair.</p>
+                    <a class="submission-cta" href="#" aria-disabled="true">Coming soon</a>
+                </div>
             </div>
         </div>
     </section>
