--- a/index.html
+++ b/index.html
@@ -110,16 +110,26 @@
         <h2>Organizers</h2>
         <div class="grid">
             <div class="card">
-                <h3>Dr. Subhra Mazumdar</h3>
-                <p>Assistant Professor<br>
-                Indian Institute of Technology Indore<br>
-                Email: subhra.mazumdar@iiti.ac.in</p>
+                <div class="organizer">
+                    <img src="pictures/subhra.jpg" alt="Photo of Dr. Subhra Mazumdar" class="organizer-photo">
+                    <div class="organizer-info">
+                        <h3>Dr. Subhra Mazumdar</h3>
+                        <p>Assistant Professor<br>
+                        Indian Institute of Technology Indore<br>
+                        Email: <a href="mailto:subhra.mazumdar@iiti.ac.in">subhra.mazumdar@iiti.ac.in</a></p>
+                    </div>
+                </div>
             </div>
             <div class="card">
-                <h3>Dr. Avishek Majumder</h3>
-                <p>Assistant Professor<br>
-                UPES, Dehradun<br>
-                Email: avishek.majumder1991@gmail.com</p>
+                <div class="organizer">
+                    <img src="pictures/avi.jpg" alt="Photo of Dr. Avishek Majumder" class="organizer-photo">
+                    <div class="organizer-info">
+                        <h3>Dr. Avishek Majumder</h3>
+                        <p>Assistant Professor<br>
+                        UPES, Dehradun<br>
+                        Email: <a href="mailto:avishek.majumder1991@gmail.com">avishek.majumder1991@gmail.com</a></p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -135,7 +145,7 @@
                 <li>Invited keynote talks</li>
                 <li>Contributed presentations (full and short)</li>
                 <li>Demo and poster session</li>
-                <li>Panel discussion on deployment, regulation, and incentives</li>
+                <li>Panel discussion</li>
                 <li>Q&amp;A sessions</li>
             </ul>
         </div>
@@ -180,11 +190,11 @@
         <h2>Paper Submission</h2>
         <div class="card">
             <div class="date-item">
-                <strong>Submission Deadline:</strong>
+                <strong>Submission Deadline</strong>
                 <span>March 25, 2026</span>
             </div>
             <div style="margin-top:0.75rem">
-                <strong>Paper format / target:</strong>
+                <strong>Paper format</strong>
                 <p class="small" style="margin:0.25rem 0 0">Full papers: up to 8 pages (excluding references). Short papers: up to 4 pages. Use the <a href="https://www.ieee.org/conferences/publishing/templates">IEEE conference template</a>.</p>
             </div>
             <div style="margin-top:0.75rem">
