--- a/index.html
+++ b/index.html
@@ -206,6 +206,24 @@
         </div>
     </section>
 
+    <section id="patrons">
+        <h2>Patrons</h2>
+        <div class="card">
+            <div class="sponsors-grid">
+                <div class="placeholder">Patrons logos will appear here.</div>
+            </div>
+        </div>
+    </section>
+
+    <section id="technical-sponsors">
+        <h2>Technical Sponsors</h2>
+        <div class="card">
+            <div class="sponsors-grid">
+                <div class="placeholder">Technical sponsors' logos will appear here.</div>
+            </div>
+        </div>
+    </section>
+
     <footer class="site-footer" id="contact">
         <p>DISTRESS 2026 — Workshop at <a href="https://icbc2026.ieee-icbc.org/">IEEE ICBC 2026</a></p>
         <p class="small">Organisers: <a href="mailto:subhra.mazumdar@iiti.ac.in">subhra.mazumdar@iiti.ac.in</a>, <a href="mailto:avishek.majumder1991@gmail.com">avishek.majumder1991@gmail.com</a></p>
