topics of interest

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
     </section>
 
     <section id="topics">
-        <h2>Topics of Interest</h2>
+        <h2>Topics of Interest (including but not limited to)</h2>
         <div class="grid">
             <div class="card">
                 <h3>Search & Encryption</h3>
                 <ul>
-                    <li>Searchable symmetric encryption schemes</li>
-                    <li>Verifiable SSE and succinct proofs</li>
-                    <li>Privacy-preserving index commitments</li>
-                    <li>Merkle and accumulator commitments</li>
+                    <li>Searchable symmetric encryption (SSE)</li>
+                    <li>Verifiable search</li>
+                    <li>Privacy-preserving index</li>
+                    <li>Dynamic and multi-user SSE</li>
                 </ul>
             </div>
             <div class="card">
